<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_book_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context="com.example.pomkim.booklist.BookDetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_detail_book_title"
                style="?android:textAppearanceSearchResultTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                tools:hint="@string/book_title"/>

            <TextView
                android:id="@+id/book_detail_book_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:textSize="12sp"
                tools:hint="@string/sub_title"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/book_detail_book_cover_image"
                android:layout_width="128dp"
                android:layout_height="168dp"
                android:scaleType="centerCrop"
                tools:src="@android:drawable/alert_dark_frame"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/book_detail_book_authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="4dp"
                    tools:hint="@string/book_authors"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/book_detail_book_publisher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        tools:hint="@string/publisher"/>

                    <TextView
                        android:id="@+id/book_detail_book_published_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        tools:hint="@string/published_date"/>

                    <TextView
                        android:id="@+id/book_detail_book_pages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        tools:hint="@string/book_pages"/>
                </LinearLayout>

                <RatingBar
                    android:id="@+id/book_detail_book_rating_bar"
                    style="?android:ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:contextClickable="false"
                    android:isIndicator="true"
                    android:numStars="5"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"/>

        <TextView
            android:id="@+id/book_detail_book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:hint="@string/description"/>
    </LinearLayout>
</ScrollView>
